--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Eshaan Khurana </title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Comfortaa|Montserrat|Open+Sans|Pacifico|Cabin|Satisfy&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Comfortaa|Montserrat|Open+Sans|Pacifico|Cabin|Satisfy&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -47,8 +49,9 @@
 
       <div class="Web">
         <img class="webfolder" src="images/folder.png" alt="combined">
-        <h3> Web Development {<img class="web" src="images/html-5.png" alt="HTML5"><img class="web" src="images/css.png" alt="CSS">
-            <img class="web" src="images/js.png" alt="JS"> }; </h3>
+        <h3> Web Development {<img class="web" src="images/html-5.png" alt="HTML5"><img class="web" src="images/css.png"
+            alt="CSS">
+          <img class="web" src="images/js.png" alt="JS"> }; </h3>
         <p> Making Multiple websites to expand my horizon . </p>
       </div>
 
