--- a/index.html
+++ b/index.html
@@ -31,27 +31,28 @@
     <img class="code" src="images/code.png" alt="Code">
 
     <div class="skills">
-      <h2>My Present Skills :-</h2>
+      <h1 class="skill">My Present Skills :-</h1>
 
       <div class="java">
         <img class="android" src="images/android.png" alt="Code">
-        <h3> Android Development using JAVA {<img class="j" src="images/java.png" alt="Code">}; </h3>
+        <h2> Android Development using JAVA {<img class="j" src="images/java.png" alt="Code">}; </h2>
         <p> A project about a bus tracking system using Firebase . </p>
       </div>
 
 
       <div class="c">
         <img class="c2" src="images/c1.jpg" alt="C1">
-        <h3> FileHandling using C { <img class="c1" src="images/c.png" alt="c_prog"> }; </h3>
+        <h2> FileHandling using C { <img class="c1" src="images/c.png" alt="c_prog"> }; </h2>
         <p> A Prison Management System using FileHandling Concepts of C programming Language . </p>
       </div>
 
 
       <div class="Web">
         <img class="webfolder" src="images/folder.png" alt="combined">
-        <h3> Web Development {<img class="web" src="images/html-5.png" alt="HTML5"><img class="web" src="images/css.png"
+        <h2> Web Development {<img class="web" src="images/html-5.png" alt="HTML5"><img class="web" src="images/css.png"
             alt="CSS">
-          <img class="web" src="images/js.png" alt="JS"> }; </h3>
+          <img class="web" src="images/js.png" alt="JS"> 
+          <img class="react" src="images/react.png" alt="Reactjs">} </h2>
         <p> Making Multiple websites to expand my horizon . </p>
       </div>
 
