--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 
       <div class="Web">
         <img class="webfolder" src="images/folder.png" alt="combined">
-        <h2> Web Development {<img class="web" src="images/html-5.png" alt="HTML5"><img class="web" src="images/css.png"
-            alt="CSS">
-          <img class="web" src="images/js.png" alt="JS"> 
-          <img class="react" src="images/react.png" alt="Reactjs">} </h2>
+        <h2> Web Development {<img class="web" src="images/html-5.png" alt="HTML5">
+          <img class="web" src="images/css.png" alt="CSS">
+          <img class="web" src="images/js.png" alt="JS">
+          <img class="react" src="images/react.png" alt="Reactjs">
+          <img class="bs" src="images/logo bootstrap icon.png" alt="Bootstrap4">} </h2>
         <p> Making Multiple websites to expand my horizon . </p>
       </div>
 
@@ -86,7 +87,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/eshaan-khurana-48a00416b/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/eshaan_07">Twitter</a>
 
-    <p> © 2019 Eshaan Khurana. </p>
+    <p class="foot"> © 2020 Eshaan Khurana. </p>
 
   </div>
 
