--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Eshaan Khurana </title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="export512px (2).png">
   <link
     href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Comfortaa|Montserrat|Open+Sans|Pacifico|Cabin|Satisfy&display=swap"
     rel="stylesheet">
