--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
       <div class="Guitar">
         <img class="guitar" src="images/guitar.png" alt="guitar">
-        <h3> Guitar; </h3>
+        <h3> Guitar : </h3>
         <p>An Acoustic Guitar lets me dream out loud. It gives strings to my dreams. </p>
       </div>
     </div>
 
     <div class="Football">
-      <img class="football" src="images/soccer-ball-variant.png" alt="Football">
-      <h3> Football; </h3>
+      <img class="football" src="images/football-ball.png" alt="Football">
+      <h3> Football : </h3>
       <p> I watch a lot of Football, play a lot of it as well as think a lot about Football. </p>
     </div>
   </div>
