--- a/homePage.html
+++ b/homePage.html
@@ -15,7 +15,7 @@
 
     <div class="top-container">
         <div class="profile">
-            <img height="350px" width="350px" src="images/Eshaan.png" alt="Eshaan">
+            <img class="photo" height="350px" width="350px" src="images/Eshaan.png" alt="Eshaan">
             <h1> Eshaan Khurana</h1>
             <h2 class="intro">I am a 2nd Year I.T. Student @ IIIT Vadodara</h2>
             <h2 class="intro">A TECHNO-GEEK </h2>
